# godex

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE_GRAPH_CONTEXT.md  CLAUDE_GRAPH_INTELLIGENCE.md  CLAUDE_TOKEN_LIMITS.md  HARDCODED_TOKEN_LIMITS.md  IMPLEMENTATION_STATUS.md  LICENSE  Outline.txt  README.md  cokeydx  phase 6.txt  phase1.txt  phase10.txt  phase2.txt  phase3.txt  phase4.txt  phase5.txt  phase7.txt  phase8.txt  phase9.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  summary.md  test_broker_fix.py  test_broker_simple.py  test_foundation.py  test_full_orchestration.py  test_gemini_pro.py  test_llm_orchestrator.py  test_mock_hybrid_search.py  test_paid_tier_intensive.py  test_planner_direct.py  test_rag_communication.py  test_rag_response_time.py  test_rag_timeout.py  test_rag_timeout_detailed.py  (+3 more)
agent/: config.py  executor.py  factory.py  llm.py  planner.py
bm25_index/: chunk_texts.pkl  matrix.npz  metadata.pkl  vectorizer.joblib
cli/: __init__.py  __main__.py  main.py
memory/: usage.db
ops/: pre-commit-config.yaml
test_pipeline/: example_prompts.md  final_test.py  identify_breaks.py  test_llm_simple.py  test_orchestration.py  test_pipeline.py  test_real_flow.py  test_with_llm.py
test_pipeline/test_project/test_calculator/: README.md  pyproject.toml
test_pipeline/test_project/test_calculator/tests/: test_basic.py
tests/: README_INTEGRATION.md  test_cli.py  test_cost_tracking.py  test_executor.py  test_executor_gemini.py  test_executor_simple.py  test_integration_gemini.py  test_llm_providers.py  test_memory.py  test_multi_agent_system.py  test_planner.py  test_planner_gemini.py  test_retrieval.py  test_tool_execution.py  test_tools.py
tools/: create_project.py  grep.py  (+7 more)
(+77 files in other folders)
