[tool.poetry]
name = "cokeydex"
version = "0.1.0"
description = "Full-stack SOTA coding agent"
authors = ["Cokeydex <cokeydex@example.com>"]
license = "MIT"
readme = "README.md"
python = ">=3.10,<3.13"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
typer = "^0.9.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
rich = "^13.7.0"
chromadb = "^0.4.22"
openai = "^1.8.0"
opentelemetry-sdk = "^1.21.0"
tqdm = "^4.66.0"
portalocker = "^2.8.0"
"ruamel.yaml" = "^0.18.0"
markdown-it-py = "^3.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
ruff = "^0.1.9"
pre-commit = "^3.6.0"
pytest = "^7.4.0"
pytest-xdist = "^3.5.0"
ipdb = "^0.13.0"

[tool.poetry.scripts]
cokeydex = "cli.main:app"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W", "B"]
extend-ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
python_files = "test_*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"